[project]
name = "biased"
version = "0.1.2.dev13"
description = "Various reusable components, helpers, and utilities which I would like to use in any Python project"
readme = "README.md"
authors = [
    { name = "Dmitry Tatarkin", email = "tatarkin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "injector",
    "pydantic>=2",
    "python-dateutil",
    "structlog",
    "ulid-py",
    "python-dotenv[cli]",
]

[project.scripts]
dotenv-run = "biased.scripts.dotenv_run:main"

[project.optional-dependencies]
django = [
    "django",
]
ninja = [
    "django-ninja",
]
django-redis = [
    "django-redis",
]
django-jsonform = [
    "django-jsonform",
]
temporal = [
    "temporalio",
]

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "rust-just",
    "python-dotenv",
]

lint = [
    "bandit",
    "django-stubs[compatible-mypy]",
    "mypy",
    "pre-commit",
    "pyright",
    "ruff",
]


[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.mypy]
packages = ["biased"]
